[package]
name = "lsp-ai"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "LSP-AI is an open-source language server that serves as a backend for AI-powered functionality, designed to assist and empower software engineers, not replace them."
repository = "https://github.com/SilasMarvin/lsp-ai"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
lsp-server = "0.7.6"
lsp-types = "0.95.0"
ropey = "1.6.1"
serde = "1.0.190"
serde_json = "1.0.108"
hf-hub = { git = "https://github.com/huggingface/hf-hub", version = "0.3.2" }
rand = "0.8.5"
tokenizers = "0.14.1"
parking_lot = "0.12.1"
once_cell = "1.19.0"
directories = "5.0.1"
llama-cpp-2 = { version = "0.1.55", optional = true }
minijinja = { version = "1.0.12", features = ["loader"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
reqwest = { version = "0.11.25", features = ["blocking", "json"] }
ignore = "0.4.22"
pgml = "1.0.4"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "time"] }
indexmap = "2.2.5"
async-trait = "0.1.78"
tree-sitter = "0.22"
# splitter-tree-sitter = { git = "https://github.com/SilasMarvin/splitter-tree-sitter" }
splitter-tree-sitter = { path = "../../splitter-tree-sitter" }
# utils-tree-sitter = { git = "https://github.com/SilasMarvin/utils-tree-sitter" }
utils-tree-sitter = { path = "../../utils-tree-sitter", features = ["all"] }

[build-dependencies]
cc="*"

[features]
default = []
llama_cpp = ["dep:llama-cpp-2"]
metal = ["llama-cpp-2/metal"]
cuda = ["llama-cpp-2/cuda"]

[dev-dependencies]
assert_cmd = "2.0.14"
