[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
description = "LSP-AI is an open-source language server that serves as a backend for AI-powered functionality, designed to assist and empower software engineers, not replace them."
repository = "https://github.com/SilasMarvin/lsp-ai"
readme = "README.md"

[workspace.dependencies]
utils-tree-sitter = { path = "./crates/utils-tree-sitter" }
splitter-tree-sitter = { path = "./crates/splitter-tree-sitter" }
