[package]
name = "splitter-tree-sitter"
version = "0.1.0"
description = "A code splitter utilizing Tree-sitter"

edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror = "1.0.61"
tree-sitter = "0.22"

[dev-dependencies]
tree-sitter-rust = "0.21"
tree-sitter-zig = { git = "https://github.com/maxxnino/tree-sitter-zig" }

[build-dependencies]
cc="1"
