[package]
name = "utils-tree-sitter"
version = "0.1.0"
description = "Utils for working with splitter-tree-sitter"

edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror = "1.0.61"
tree-sitter = "0.22"
tree-sitter-bash = { version = "0.21", optional  = true }
tree-sitter-c = { version = "0.21", optional  = true }
tree-sitter-cpp = { version = "0.22", optional  = true }
tree-sitter-c-sharp = { version = "0.21", optional  = true }
tree-sitter-css = { version = "0.21", optional  = true }
tree-sitter-elixir = { version = "0.2", optional  = true }
tree-sitter-erlang = { version = "0.6", optional  = true }
tree-sitter-go = { version = "0.21", optional  = true }
tree-sitter-html = { version = "0.20", optional  = true }
tree-sitter-java = { version = "0.21", optional  = true }
tree-sitter-javascript = { version = "0.21", optional  = true }
tree-sitter-json = { version = "0.21", optional  = true }
tree-sitter-haskell = { version = "0.21", optional = true }
tree-sitter-lua = { version = "0.1.0", optional = true }
tree-sitter-ocaml = { version = "0.22.0", optional = true }
tree-sitter-python = { version = "0.21", optional = true }
tree-sitter-rust = { version = "0.21", optional = true }
# tree-sitter-zig = { git = "https://github.com/maxxnino/tree-sitter-zig", optional = true }

[build-dependencies]
cc="*"

[features]
default = []
all = ["dep:tree-sitter-python", "dep:tree-sitter-bash", "dep:tree-sitter-c", "dep:tree-sitter-cpp", "dep:tree-sitter-c-sharp", "dep:tree-sitter-css", "dep:tree-sitter-elixir", "dep:tree-sitter-erlang", "dep:tree-sitter-go", "dep:tree-sitter-html", "dep:tree-sitter-java", "dep:tree-sitter-javascript", "dep:tree-sitter-json", "dep:tree-sitter-rust", "dep:tree-sitter-haskell", "dep:tree-sitter-lua", "dep:tree-sitter-ocaml"]
