[package]
name = "utils-tree-sitter"
version = "0.1.0"
description = "Utils for working with splitter-tree-sitter"

edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror = "1.0.61"
tree-sitter = "0.22"
tree-sitter-bash = { version = "0.21", optional  = true }
tree-sitter-c = { version = "0.21", optional  = true }
tree-sitter-cpp = { version = "0.22", optional  = true }
tree-sitter-c-sharp = { version = "0.21", optional  = true }
tree-sitter-css = { version = "0.21", optional  = true }
tree-sitter-elixir = { version = "0.2", optional  = true }
tree-sitter-erlang = { version = "0.6", optional  = true }
tree-sitter-go = { version = "0.21", optional  = true }
tree-sitter-html = { version = "0.20", optional  = true }
tree-sitter-java = { version = "0.21", optional  = true }
tree-sitter-javascript = { version = "0.21", optional  = true }
tree-sitter-json = { version = "0.21", optional  = true }
tree-sitter-haskell = { version = "0.21", optional = true }
tree-sitter-lua = { version = "0.1.0", optional = true }
tree-sitter-ocaml = { version = "0.22.0", optional = true }
tree-sitter-python = { version = "0.21", optional = true }
tree-sitter-rust = { version = "0.21", optional = true }
# tree-sitter-zig = { git = "https://github.com/maxxnino/tree-sitter-zig", optional = true }

[build-dependencies]
cc="1"

[features]
default = []
all = ["python", "bash", "c", "cpp", "csharp", "css", "elixir", "erlang", "go", "html", "java", "javascript", "json", "rust", "haskell", "lua", "ocaml"]

python = ["dep:tree-sitter-python"]
bash = ["dep:tree-sitter-bash"]
c = ["dep:tree-sitter-c"]
cpp = ["dep:tree-sitter-cpp"]
csharp = ["dep:tree-sitter-c-sharp"]
css = ["dep:tree-sitter-css"]
elixir = ["dep:tree-sitter-elixir"]
erlang = ["dep:tree-sitter-erlang"]
go = ["dep:tree-sitter-go"]
html = ["dep:tree-sitter-html"]
java = ["dep:tree-sitter-java"]
javascript = ["dep:tree-sitter-javascript"]
json = ["dep:tree-sitter-json"]
rust = ["dep:tree-sitter-rust"]
haskell = ["dep:tree-sitter-haskell"]
lua = ["dep:tree-sitter-lua"]
ocaml = ["dep:tree-sitter-ocaml"]
